@@ -29,7 +29,7 @@ MAN5	= ../man/active.5 ../man/active.times.5 ../man/buffindexed.conf.5 \
 
 MAN8	= ../man/actsync.8 ../man/archive.8 ../man/auth_krb5.8 \
 	../man/batcher.8 ../man/buffchan.8 \
-	../man/ckpasswd.8 ../man/ctlinnd.8 ../man/docheckgroups.8 \
+	../man/ckpasswd.8 ../man/cnfsstat.8 ../man/ctlinnd.8 ../man/docheckgroups.8 \
 	../man/domain.8 \
 	../man/expireover.8 ../man/ident.8 ../man/innd.8 ../man/inndf.8 \
 	../man/nnrpd.8 ../man/innbind.8 ../man/innupgrade.8 \
@@ -107,6 +107,7 @@ maintclean: distclean
 ../man/batcher.8:	batcher.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/buffchan.8:	buffchan.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/ckpasswd.8:	ckpasswd.pod		; $(POD2MAN) -s 8 $? > $@
+../man/cnfsstat.8:	cnfsstat.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/ctlinnd.8:	ctlinnd.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/docheckgroups.8:	docheckgroups.pod	; $(POD2MAN) -s 8 $? > $@
 ../man/domain.8:	domain.pod		; $(POD2MAN) -s 8 $? > $@
